+ added hide keyboard on mobile devices after search event o fixed centering of search results

--- a/src/app/components/media/media.component.scss
+++ b/src/app/components/media/media.component.scss
@@ -28,16 +28,12 @@
   padding: 3px;
 }
 
-.playlist{
-
-
-}
 
 .playlist {
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
-  justify-content: flex-start;
+  justify-content: center;
 }
 /* Column Gap */
 .playlist > * {
